# tapir

./: Cargo.toml  Justfile  README.md  dprint.json  rust-toolchain.toml
src/: agent.rs  api.rs  command.rs  config.rs  context.rs  display.rs  error.rs  main.rs  readline.rs  session.rs  signal.rs  skill.rs  sse.rs  stream.rs  timer.rs  tool.rs  types.rs  util.rs
